--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
 	<version>0.1-SNAPSHOT</version>
 	<name>dbtestingtool</name>
 	<url>http://maven.apache.org</url>
+        
+        <repositories>
+            <repository>
+                <id>clojars.org</id>
+                <url>http://clojars.org/repo</url>
+            </repository>
+        </repositories>
 
 	<dependencies>
 		<dependency>
@@ -51,7 +58,14 @@
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901.jdbc4</version>
-		</dependency>           
+		</dependency>
+                
+                <!-- MonetDB JDBC driver -->
+                <dependency>
+                        <groupId>monetdb</groupId>
+                        <artifactId>monetdb-jdbc</artifactId>
+                        <version>2.10</version>
+                </dependency>           
 	</dependencies>
 
 	<build>
