--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,15 @@
                         <groupId>monetdb</groupId>
                         <artifactId>monetdb-jdbc</artifactId>
                         <version>2.10</version>
-                </dependency>           
+                </dependency>    
+                
+                <!-- SQL Server JDBC driver -->
+                <!-- MS SQL JDBC driver -->
+		<dependency>
+			<groupId>net.sourceforge.jtds</groupId>
+			<artifactId>jtds</artifactId>
+			<version>1.2.7</version>
+		</dependency>       
 	</dependencies>
 
 	<build>
